learn about: dinamyc routes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,9 @@
       "@/*": ["./*"],
       "~~/*": ["./*"],
       "@@/*": ["./*"]
+    },
+    "compilerOptions": {
+      "allowJs": true
     }
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
