--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.4",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "sass": "^1.62.1",
+    "sass-loader": "^10.4.1"
   }
 }
