--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "airtable": "^0.11.6",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.30.1",
     "nuxt": "^2.15.8",
